// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Schema drift (key-tree snapshots) > 'certifications.movie_certifications' shape 1`] = `
[
  "certifications",
  "certifications.{}",
  "certifications.{}[].certification",
  "certifications.{}[].meaning",
  "certifications.{}[].order",
]
`;

exports[`Schema drift (key-tree snapshots) > 'certifications.tv_certifications' shape 1`] = `
[
  "certifications",
  "certifications.{}",
  "certifications.{}[].certification",
  "certifications.{}[].meaning",
  "certifications.{}[].order",
]
`;

exports[`Schema drift (key-tree snapshots) > 'changes.movie_list' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].id",
  "results[].softcore",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'changes.people_list' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].id",
  "results[].softcore",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'changes.tv_list' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].id",
  "results[].softcore",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'collections.details' shape 1`] = `
[
  "backdrop_path",
  "id",
  "name",
  "original_language",
  "original_name",
  "overview",
  "parts",
  "parts[].adult",
  "parts[].backdrop_path",
  "parts[].genre_ids",
  "parts[].id",
  "parts[].media_type",
  "parts[].original_language",
  "parts[].original_title",
  "parts[].overview",
  "parts[].popularity",
  "parts[].poster_path",
  "parts[].release_date",
  "parts[].softcore",
  "parts[].title",
  "parts[].video",
  "parts[].vote_average",
  "parts[].vote_count",
  "poster_path",
]
`;

exports[`Schema drift (key-tree snapshots) > 'collections.images' shape 1`] = `
[
  "backdrops",
  "backdrops[].aspect_ratio",
  "backdrops[].file_path",
  "backdrops[].height",
  "backdrops[].iso_3166_1",
  "backdrops[].iso_639_1",
  "backdrops[].vote_average",
  "backdrops[].vote_count",
  "backdrops[].width",
  "id",
  "posters",
  "posters[].aspect_ratio",
  "posters[].file_path",
  "posters[].height",
  "posters[].iso_3166_1",
  "posters[].iso_639_1",
  "posters[].vote_average",
  "posters[].vote_count",
  "posters[].width",
]
`;

exports[`Schema drift (key-tree snapshots) > 'collections.translations' shape 1`] = `
[
  "id",
  "translations",
  "translations[].data",
  "translations[].data.homepage",
  "translations[].data.overview",
  "translations[].data.title",
  "translations[].english_name",
  "translations[].iso_3166_1",
  "translations[].iso_639_1",
  "translations[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'companies.alternative_names' shape 1`] = `
[
  "id",
  "results",
  "results[].name",
  "results[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'companies.details' shape 1`] = `
[
  "description",
  "headquarters",
  "homepage",
  "id",
  "logo_path",
  "name",
  "origin_country",
  "parent_company",
]
`;

exports[`Schema drift (key-tree snapshots) > 'companies.images' shape 1`] = `
[
  "id",
  "logos",
  "logos[].aspect_ratio",
  "logos[].file_path",
  "logos[].file_type",
  "logos[].height",
  "logos[].id",
  "logos[].vote_average",
  "logos[].vote_count",
  "logos[].width",
]
`;

exports[`Schema drift (key-tree snapshots) > 'configuration.countries' shape 1`] = `
[
  "[].english_name",
  "[].iso_3166_1",
  "[].native_name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'configuration.details' shape 1`] = `
[
  "change_keys",
  "images",
  "images.backdrop_sizes",
  "images.base_url",
  "images.logo_sizes",
  "images.poster_sizes",
  "images.profile_sizes",
  "images.secure_base_url",
  "images.still_sizes",
]
`;

exports[`Schema drift (key-tree snapshots) > 'configuration.jobs' shape 1`] = `
[
  "[].department",
  "[].jobs",
]
`;

exports[`Schema drift (key-tree snapshots) > 'configuration.languages' shape 1`] = `
[
  "[].english_name",
  "[].iso_639_1",
  "[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'configuration.primary_translations' shape 1`] = `[]`;

exports[`Schema drift (key-tree snapshots) > 'configuration.timezones' shape 1`] = `
[
  "[].iso_3166_1",
  "[].zones",
]
`;

exports[`Schema drift (key-tree snapshots) > 'credits.details' shape 1`] = `
[
  "credit_type",
  "department",
  "id",
  "job",
  "media",
  "media.adult",
  "media.backdrop_path",
  "media.character",
  "media.genre_ids",
  "media.id",
  "media.media_type",
  "media.original_language",
  "media.original_title",
  "media.overview",
  "media.popularity",
  "media.poster_path",
  "media.release_date",
  "media.softcore",
  "media.title",
  "media.video",
  "media.vote_average",
  "media.vote_count",
  "media_type",
  "person",
  "person.adult",
  "person.gender",
  "person.id",
  "person.known_for_department",
  "person.media_type",
  "person.name",
  "person.original_name",
  "person.popularity",
  "person.profile_path",
]
`;

exports[`Schema drift (key-tree snapshots) > 'discover.movie' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'discover.tv' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].softcore",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'find.by_id' shape 1`] = `
[
  "movie_results",
  "movie_results[].adult",
  "movie_results[].backdrop_path",
  "movie_results[].genre_ids",
  "movie_results[].id",
  "movie_results[].media_type",
  "movie_results[].original_language",
  "movie_results[].original_title",
  "movie_results[].overview",
  "movie_results[].popularity",
  "movie_results[].poster_path",
  "movie_results[].release_date",
  "movie_results[].softcore",
  "movie_results[].title",
  "movie_results[].video",
  "movie_results[].vote_average",
  "movie_results[].vote_count",
  "person_results",
  "tv_episode_results",
  "tv_results",
  "tv_season_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'genres.movie_list' shape 1`] = `
[
  "genres",
  "genres[].id",
  "genres[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'genres.tv_list' shape 1`] = `
[
  "genres",
  "genres[].id",
  "genres[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'keywords.details' shape 1`] = `
[
  "id",
  "name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'keywords.movies' shape 1`] = `
[
  "id",
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movie_lists.now_playing' shape 1`] = `
[
  "dates",
  "dates.maximum",
  "dates.minimum",
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movie_lists.popular' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movie_lists.top_rated' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movie_lists.upcoming' shape 1`] = `
[
  "dates",
  "dates.maximum",
  "dates.minimum",
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.alternative_titles' shape 1`] = `
[
  "id",
  "titles",
  "titles[].iso_3166_1",
  "titles[].title",
  "titles[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.changes' shape 1`] = `
[
  "changes",
  "changes[].items",
  "changes[].items[].action",
  "changes[].items[].id",
  "changes[].items[].iso_3166_1",
  "changes[].items[].iso_639_1",
  "changes[].items[].original_value",
  "changes[].items[].original_value.title_logo",
  "changes[].items[].original_value.title_logo.file_path",
  "changes[].items[].original_value.title_logo.iso_639_1",
  "changes[].items[].time",
  "changes[].items[].value",
  "changes[].items[].value.title_logo",
  "changes[].items[].value.title_logo.file_path",
  "changes[].items[].value.title_logo.iso_639_1",
  "changes[].key",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.credits' shape 1`] = `
[
  "cast",
  "cast[].adult",
  "cast[].cast_id",
  "cast[].character",
  "cast[].credit_id",
  "cast[].gender",
  "cast[].id",
  "cast[].known_for_department",
  "cast[].name",
  "cast[].order",
  "cast[].original_name",
  "cast[].popularity",
  "cast[].profile_path",
  "crew",
  "crew[].adult",
  "crew[].credit_id",
  "crew[].department",
  "crew[].gender",
  "crew[].id",
  "crew[].job",
  "crew[].known_for_department",
  "crew[].name",
  "crew[].original_name",
  "crew[].popularity",
  "crew[].profile_path",
  "id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.details (franchise)' shape 1`] = `
[
  "adult",
  "backdrop_path",
  "belongs_to_collection",
  "budget",
  "genres",
  "genres[].id",
  "genres[].name",
  "homepage",
  "id",
  "imdb_id",
  "origin_country",
  "original_language",
  "original_title",
  "overview",
  "popularity",
  "poster_path",
  "production_companies",
  "production_companies[].id",
  "production_companies[].logo_path",
  "production_companies[].name",
  "production_companies[].origin_country",
  "production_countries",
  "production_countries[].iso_3166_1",
  "production_countries[].name",
  "release_date",
  "revenue",
  "runtime",
  "softcore",
  "spoken_languages",
  "spoken_languages[].english_name",
  "spoken_languages[].iso_639_1",
  "spoken_languages[].name",
  "status",
  "tagline",
  "title",
  "video",
  "vote_average",
  "vote_count",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.details' shape 1`] = `
[
  "adult",
  "backdrop_path",
  "belongs_to_collection",
  "budget",
  "genres",
  "genres[].id",
  "genres[].name",
  "homepage",
  "id",
  "imdb_id",
  "origin_country",
  "original_language",
  "original_title",
  "overview",
  "popularity",
  "poster_path",
  "production_companies",
  "production_companies[].id",
  "production_companies[].logo_path",
  "production_companies[].name",
  "production_companies[].origin_country",
  "production_countries",
  "production_countries[].iso_3166_1",
  "production_countries[].name",
  "release_date",
  "revenue",
  "runtime",
  "softcore",
  "spoken_languages",
  "spoken_languages[].english_name",
  "spoken_languages[].iso_639_1",
  "spoken_languages[].name",
  "status",
  "tagline",
  "title",
  "video",
  "vote_average",
  "vote_count",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.details+append' shape 1`] = `
[
  "adult",
  "alternative_titles",
  "alternative_titles.titles",
  "alternative_titles.titles[].iso_3166_1",
  "alternative_titles.titles[].title",
  "alternative_titles.titles[].type",
  "backdrop_path",
  "belongs_to_collection",
  "budget",
  "changes",
  "changes.changes",
  "credits",
  "credits.cast",
  "credits.cast[].adult",
  "credits.cast[].cast_id",
  "credits.cast[].character",
  "credits.cast[].credit_id",
  "credits.cast[].gender",
  "credits.cast[].id",
  "credits.cast[].known_for_department",
  "credits.cast[].name",
  "credits.cast[].order",
  "credits.cast[].original_name",
  "credits.cast[].popularity",
  "credits.cast[].profile_path",
  "credits.crew",
  "credits.crew[].adult",
  "credits.crew[].credit_id",
  "credits.crew[].department",
  "credits.crew[].gender",
  "credits.crew[].id",
  "credits.crew[].job",
  "credits.crew[].known_for_department",
  "credits.crew[].name",
  "credits.crew[].original_name",
  "credits.crew[].popularity",
  "credits.crew[].profile_path",
  "external_ids",
  "external_ids.facebook_id",
  "external_ids.imdb_id",
  "external_ids.instagram_id",
  "external_ids.twitter_id",
  "external_ids.wikidata_id",
  "genres",
  "genres[].id",
  "genres[].name",
  "homepage",
  "id",
  "images",
  "images.backdrops",
  "images.backdrops[].aspect_ratio",
  "images.backdrops[].file_path",
  "images.backdrops[].height",
  "images.backdrops[].iso_3166_1",
  "images.backdrops[].iso_639_1",
  "images.backdrops[].vote_average",
  "images.backdrops[].vote_count",
  "images.backdrops[].width",
  "images.logos",
  "images.logos[].aspect_ratio",
  "images.logos[].file_path",
  "images.logos[].height",
  "images.logos[].iso_3166_1",
  "images.logos[].iso_639_1",
  "images.logos[].vote_average",
  "images.logos[].vote_count",
  "images.logos[].width",
  "images.posters",
  "images.posters[].aspect_ratio",
  "images.posters[].file_path",
  "images.posters[].height",
  "images.posters[].iso_3166_1",
  "images.posters[].iso_639_1",
  "images.posters[].vote_average",
  "images.posters[].vote_count",
  "images.posters[].width",
  "imdb_id",
  "keywords",
  "keywords.keywords",
  "keywords.keywords[].id",
  "keywords.keywords[].name",
  "origin_country",
  "original_language",
  "original_title",
  "overview",
  "popularity",
  "poster_path",
  "production_companies",
  "production_companies[].id",
  "production_companies[].logo_path",
  "production_companies[].name",
  "production_companies[].origin_country",
  "production_countries",
  "production_countries[].iso_3166_1",
  "production_countries[].name",
  "recommendations",
  "recommendations.page",
  "recommendations.results",
  "recommendations.results[].adult",
  "recommendations.results[].backdrop_path",
  "recommendations.results[].genre_ids",
  "recommendations.results[].id",
  "recommendations.results[].media_type",
  "recommendations.results[].original_language",
  "recommendations.results[].original_title",
  "recommendations.results[].overview",
  "recommendations.results[].popularity",
  "recommendations.results[].poster_path",
  "recommendations.results[].release_date",
  "recommendations.results[].softcore",
  "recommendations.results[].title",
  "recommendations.results[].video",
  "recommendations.results[].vote_average",
  "recommendations.results[].vote_count",
  "recommendations.total_pages",
  "recommendations.total_results",
  "release_date",
  "release_dates",
  "release_dates.results",
  "release_dates.results[].iso_3166_1",
  "release_dates.results[].release_dates",
  "release_dates.results[].release_dates[].certification",
  "release_dates.results[].release_dates[].descriptors",
  "release_dates.results[].release_dates[].iso_639_1",
  "release_dates.results[].release_dates[].note",
  "release_dates.results[].release_dates[].release_date",
  "release_dates.results[].release_dates[].type",
  "revenue",
  "reviews",
  "reviews.page",
  "reviews.results",
  "reviews.results[].author",
  "reviews.results[].author_details",
  "reviews.results[].author_details.avatar_path",
  "reviews.results[].author_details.name",
  "reviews.results[].author_details.rating",
  "reviews.results[].author_details.username",
  "reviews.results[].content",
  "reviews.results[].created_at",
  "reviews.results[].id",
  "reviews.results[].updated_at",
  "reviews.results[].url",
  "reviews.total_pages",
  "reviews.total_results",
  "runtime",
  "similar",
  "similar.page",
  "similar.results",
  "similar.results[].adult",
  "similar.results[].backdrop_path",
  "similar.results[].genre_ids",
  "similar.results[].id",
  "similar.results[].original_language",
  "similar.results[].original_title",
  "similar.results[].overview",
  "similar.results[].popularity",
  "similar.results[].poster_path",
  "similar.results[].release_date",
  "similar.results[].softcore",
  "similar.results[].title",
  "similar.results[].video",
  "similar.results[].vote_average",
  "similar.results[].vote_count",
  "similar.total_pages",
  "similar.total_results",
  "softcore",
  "spoken_languages",
  "spoken_languages[].english_name",
  "spoken_languages[].iso_639_1",
  "spoken_languages[].name",
  "status",
  "tagline",
  "title",
  "translations",
  "translations.translations",
  "translations.translations[].data",
  "translations.translations[].data.homepage",
  "translations.translations[].data.overview",
  "translations.translations[].data.runtime",
  "translations.translations[].data.tagline",
  "translations.translations[].data.title",
  "translations.translations[].english_name",
  "translations.translations[].iso_3166_1",
  "translations.translations[].iso_639_1",
  "translations.translations[].name",
  "video",
  "videos",
  "videos.results",
  "videos.results[].id",
  "videos.results[].iso_3166_1",
  "videos.results[].iso_639_1",
  "videos.results[].key",
  "videos.results[].name",
  "videos.results[].official",
  "videos.results[].published_at",
  "videos.results[].site",
  "videos.results[].size",
  "videos.results[].type",
  "vote_average",
  "vote_count",
  "watch/providers",
  "watch/providers.results",
  "watch/providers.results.{}",
  "watch/providers.results.{}.ads",
  "watch/providers.results.{}.ads[].display_priority",
  "watch/providers.results.{}.ads[].logo_path",
  "watch/providers.results.{}.ads[].provider_id",
  "watch/providers.results.{}.ads[].provider_name",
  "watch/providers.results.{}.buy",
  "watch/providers.results.{}.buy[].display_priority",
  "watch/providers.results.{}.buy[].logo_path",
  "watch/providers.results.{}.buy[].provider_id",
  "watch/providers.results.{}.buy[].provider_name",
  "watch/providers.results.{}.flatrate",
  "watch/providers.results.{}.flatrate[].display_priority",
  "watch/providers.results.{}.flatrate[].logo_path",
  "watch/providers.results.{}.flatrate[].provider_id",
  "watch/providers.results.{}.flatrate[].provider_name",
  "watch/providers.results.{}.link",
  "watch/providers.results.{}.rent",
  "watch/providers.results.{}.rent[].display_priority",
  "watch/providers.results.{}.rent[].logo_path",
  "watch/providers.results.{}.rent[].provider_id",
  "watch/providers.results.{}.rent[].provider_name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.external_ids' shape 1`] = `
[
  "facebook_id",
  "id",
  "imdb_id",
  "instagram_id",
  "twitter_id",
  "wikidata_id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.images' shape 1`] = `
[
  "backdrops",
  "backdrops[].aspect_ratio",
  "backdrops[].file_path",
  "backdrops[].height",
  "backdrops[].iso_3166_1",
  "backdrops[].iso_639_1",
  "backdrops[].vote_average",
  "backdrops[].vote_count",
  "backdrops[].width",
  "id",
  "logos",
  "logos[].aspect_ratio",
  "logos[].file_path",
  "logos[].height",
  "logos[].iso_3166_1",
  "logos[].iso_639_1",
  "logos[].vote_average",
  "logos[].vote_count",
  "logos[].width",
  "posters",
  "posters[].aspect_ratio",
  "posters[].file_path",
  "posters[].height",
  "posters[].iso_3166_1",
  "posters[].iso_639_1",
  "posters[].vote_average",
  "posters[].vote_count",
  "posters[].width",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.keywords' shape 1`] = `
[
  "id",
  "keywords",
  "keywords[].id",
  "keywords[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.recommendations' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].media_type",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.release_dates' shape 1`] = `
[
  "id",
  "results",
  "results[].iso_3166_1",
  "results[].release_dates",
  "results[].release_dates[].certification",
  "results[].release_dates[].descriptors",
  "results[].release_dates[].iso_639_1",
  "results[].release_dates[].note",
  "results[].release_dates[].release_date",
  "results[].release_dates[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.reviews' shape 1`] = `
[
  "id",
  "page",
  "results",
  "results[].author",
  "results[].author_details",
  "results[].author_details.avatar_path",
  "results[].author_details.name",
  "results[].author_details.rating",
  "results[].author_details.username",
  "results[].content",
  "results[].created_at",
  "results[].id",
  "results[].updated_at",
  "results[].url",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.similar' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.translations' shape 1`] = `
[
  "id",
  "translations",
  "translations[].data",
  "translations[].data.homepage",
  "translations[].data.overview",
  "translations[].data.runtime",
  "translations[].data.tagline",
  "translations[].data.title",
  "translations[].english_name",
  "translations[].iso_3166_1",
  "translations[].iso_639_1",
  "translations[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.videos' shape 1`] = `
[
  "id",
  "results",
  "results[].id",
  "results[].iso_3166_1",
  "results[].iso_639_1",
  "results[].key",
  "results[].name",
  "results[].official",
  "results[].published_at",
  "results[].site",
  "results[].size",
  "results[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'movies.watch_providers' shape 1`] = `
[
  "id",
  "results",
  "results.{}",
  "results.{}.ads",
  "results.{}.ads[].display_priority",
  "results.{}.ads[].logo_path",
  "results.{}.ads[].provider_id",
  "results.{}.ads[].provider_name",
  "results.{}.buy",
  "results.{}.buy[].display_priority",
  "results.{}.buy[].logo_path",
  "results.{}.buy[].provider_id",
  "results.{}.buy[].provider_name",
  "results.{}.flatrate",
  "results.{}.flatrate[].display_priority",
  "results.{}.flatrate[].logo_path",
  "results.{}.flatrate[].provider_id",
  "results.{}.flatrate[].provider_name",
  "results.{}.link",
  "results.{}.rent",
  "results.{}.rent[].display_priority",
  "results.{}.rent[].logo_path",
  "results.{}.rent[].provider_id",
  "results.{}.rent[].provider_name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'networks.alternative_names' shape 1`] = `
[
  "id",
  "results",
  "results[].name",
  "results[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'networks.details' shape 1`] = `
[
  "headquarters",
  "homepage",
  "id",
  "logo_path",
  "name",
  "origin_country",
]
`;

exports[`Schema drift (key-tree snapshots) > 'networks.images' shape 1`] = `
[
  "id",
  "logos",
  "logos[].aspect_ratio",
  "logos[].file_path",
  "logos[].file_type",
  "logos[].height",
  "logos[].id",
  "logos[].vote_average",
  "logos[].vote_count",
  "logos[].width",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.changes' shape 1`] = `
[
  "changes",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.combined_credits' shape 1`] = `
[
  "cast",
  "cast[].adult",
  "cast[].backdrop_path",
  "cast[].character",
  "cast[].credit_id",
  "cast[].episode_count",
  "cast[].first_air_date",
  "cast[].first_credit_air_date",
  "cast[].genre_ids",
  "cast[].id",
  "cast[].media_type",
  "cast[].name",
  "cast[].order",
  "cast[].origin_country",
  "cast[].original_language",
  "cast[].original_name",
  "cast[].original_title",
  "cast[].overview",
  "cast[].popularity",
  "cast[].poster_path",
  "cast[].release_date",
  "cast[].softcore",
  "cast[].title",
  "cast[].video",
  "cast[].vote_average",
  "cast[].vote_count",
  "crew",
  "crew[].adult",
  "crew[].backdrop_path",
  "crew[].credit_id",
  "crew[].department",
  "crew[].episode_count",
  "crew[].first_air_date",
  "crew[].first_credit_air_date",
  "crew[].genre_ids",
  "crew[].id",
  "crew[].job",
  "crew[].media_type",
  "crew[].name",
  "crew[].origin_country",
  "crew[].original_language",
  "crew[].original_name",
  "crew[].original_title",
  "crew[].overview",
  "crew[].popularity",
  "crew[].poster_path",
  "crew[].release_date",
  "crew[].softcore",
  "crew[].title",
  "crew[].video",
  "crew[].vote_average",
  "crew[].vote_count",
  "id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.details' shape 1`] = `
[
  "adult",
  "also_known_as",
  "biography",
  "birthday",
  "deathday",
  "gender",
  "homepage",
  "id",
  "imdb_id",
  "known_for_department",
  "name",
  "place_of_birth",
  "popularity",
  "profile_path",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.details+append' shape 1`] = `
[
  "adult",
  "also_known_as",
  "biography",
  "birthday",
  "changes",
  "changes.changes",
  "combined_credits",
  "combined_credits.cast",
  "combined_credits.cast[].adult",
  "combined_credits.cast[].backdrop_path",
  "combined_credits.cast[].character",
  "combined_credits.cast[].credit_id",
  "combined_credits.cast[].episode_count",
  "combined_credits.cast[].first_air_date",
  "combined_credits.cast[].first_credit_air_date",
  "combined_credits.cast[].genre_ids",
  "combined_credits.cast[].id",
  "combined_credits.cast[].media_type",
  "combined_credits.cast[].name",
  "combined_credits.cast[].order",
  "combined_credits.cast[].origin_country",
  "combined_credits.cast[].original_language",
  "combined_credits.cast[].original_name",
  "combined_credits.cast[].original_title",
  "combined_credits.cast[].overview",
  "combined_credits.cast[].popularity",
  "combined_credits.cast[].poster_path",
  "combined_credits.cast[].release_date",
  "combined_credits.cast[].softcore",
  "combined_credits.cast[].title",
  "combined_credits.cast[].video",
  "combined_credits.cast[].vote_average",
  "combined_credits.cast[].vote_count",
  "combined_credits.crew",
  "combined_credits.crew[].adult",
  "combined_credits.crew[].backdrop_path",
  "combined_credits.crew[].credit_id",
  "combined_credits.crew[].department",
  "combined_credits.crew[].episode_count",
  "combined_credits.crew[].first_air_date",
  "combined_credits.crew[].first_credit_air_date",
  "combined_credits.crew[].genre_ids",
  "combined_credits.crew[].id",
  "combined_credits.crew[].job",
  "combined_credits.crew[].media_type",
  "combined_credits.crew[].name",
  "combined_credits.crew[].origin_country",
  "combined_credits.crew[].original_language",
  "combined_credits.crew[].original_name",
  "combined_credits.crew[].original_title",
  "combined_credits.crew[].overview",
  "combined_credits.crew[].popularity",
  "combined_credits.crew[].poster_path",
  "combined_credits.crew[].release_date",
  "combined_credits.crew[].softcore",
  "combined_credits.crew[].title",
  "combined_credits.crew[].video",
  "combined_credits.crew[].vote_average",
  "combined_credits.crew[].vote_count",
  "deathday",
  "external_ids",
  "external_ids.facebook_id",
  "external_ids.freebase_id",
  "external_ids.freebase_mid",
  "external_ids.imdb_id",
  "external_ids.instagram_id",
  "external_ids.tiktok_id",
  "external_ids.tvrage_id",
  "external_ids.twitter_id",
  "external_ids.wikidata_id",
  "external_ids.youtube_id",
  "gender",
  "homepage",
  "id",
  "images",
  "images.profiles",
  "images.profiles[].aspect_ratio",
  "images.profiles[].file_path",
  "images.profiles[].height",
  "images.profiles[].iso_3166_1",
  "images.profiles[].iso_639_1",
  "images.profiles[].vote_average",
  "images.profiles[].vote_count",
  "images.profiles[].width",
  "imdb_id",
  "known_for_department",
  "movie_credits",
  "movie_credits.cast",
  "movie_credits.cast[].adult",
  "movie_credits.cast[].backdrop_path",
  "movie_credits.cast[].character",
  "movie_credits.cast[].credit_id",
  "movie_credits.cast[].genre_ids",
  "movie_credits.cast[].id",
  "movie_credits.cast[].order",
  "movie_credits.cast[].original_language",
  "movie_credits.cast[].original_title",
  "movie_credits.cast[].overview",
  "movie_credits.cast[].popularity",
  "movie_credits.cast[].poster_path",
  "movie_credits.cast[].release_date",
  "movie_credits.cast[].softcore",
  "movie_credits.cast[].title",
  "movie_credits.cast[].video",
  "movie_credits.cast[].vote_average",
  "movie_credits.cast[].vote_count",
  "movie_credits.crew",
  "movie_credits.crew[].adult",
  "movie_credits.crew[].backdrop_path",
  "movie_credits.crew[].credit_id",
  "movie_credits.crew[].department",
  "movie_credits.crew[].genre_ids",
  "movie_credits.crew[].id",
  "movie_credits.crew[].job",
  "movie_credits.crew[].original_language",
  "movie_credits.crew[].original_title",
  "movie_credits.crew[].overview",
  "movie_credits.crew[].popularity",
  "movie_credits.crew[].poster_path",
  "movie_credits.crew[].release_date",
  "movie_credits.crew[].softcore",
  "movie_credits.crew[].title",
  "movie_credits.crew[].video",
  "movie_credits.crew[].vote_average",
  "movie_credits.crew[].vote_count",
  "name",
  "place_of_birth",
  "popularity",
  "profile_path",
  "tagged_images",
  "tagged_images.page",
  "tagged_images.results",
  "tagged_images.results[].aspect_ratio",
  "tagged_images.results[].file_path",
  "tagged_images.results[].height",
  "tagged_images.results[].id",
  "tagged_images.results[].image_type",
  "tagged_images.results[].iso_3166_1",
  "tagged_images.results[].iso_639_1",
  "tagged_images.results[].media",
  "tagged_images.results[].media.adult",
  "tagged_images.results[].media.backdrop_path",
  "tagged_images.results[].media.genre_ids",
  "tagged_images.results[].media.id",
  "tagged_images.results[].media.media_type",
  "tagged_images.results[].media.original_language",
  "tagged_images.results[].media.original_title",
  "tagged_images.results[].media.overview",
  "tagged_images.results[].media.popularity",
  "tagged_images.results[].media.poster_path",
  "tagged_images.results[].media.release_date",
  "tagged_images.results[].media.softcore",
  "tagged_images.results[].media.title",
  "tagged_images.results[].media.video",
  "tagged_images.results[].media.vote_average",
  "tagged_images.results[].media.vote_count",
  "tagged_images.results[].media_type",
  "tagged_images.results[].vote_average",
  "tagged_images.results[].vote_count",
  "tagged_images.results[].width",
  "tagged_images.total_pages",
  "tagged_images.total_results",
  "translations",
  "translations.translations",
  "translations.translations[].data",
  "translations.translations[].data.biography",
  "translations.translations[].data.name",
  "translations.translations[].data.primary",
  "translations.translations[].english_name",
  "translations.translations[].iso_3166_1",
  "translations.translations[].iso_639_1",
  "translations.translations[].name",
  "tv_credits",
  "tv_credits.cast",
  "tv_credits.cast[].adult",
  "tv_credits.cast[].backdrop_path",
  "tv_credits.cast[].character",
  "tv_credits.cast[].credit_id",
  "tv_credits.cast[].episode_count",
  "tv_credits.cast[].first_air_date",
  "tv_credits.cast[].first_credit_air_date",
  "tv_credits.cast[].genre_ids",
  "tv_credits.cast[].id",
  "tv_credits.cast[].name",
  "tv_credits.cast[].origin_country",
  "tv_credits.cast[].original_language",
  "tv_credits.cast[].original_name",
  "tv_credits.cast[].overview",
  "tv_credits.cast[].popularity",
  "tv_credits.cast[].poster_path",
  "tv_credits.cast[].softcore",
  "tv_credits.cast[].vote_average",
  "tv_credits.cast[].vote_count",
  "tv_credits.crew",
  "tv_credits.crew[].adult",
  "tv_credits.crew[].backdrop_path",
  "tv_credits.crew[].credit_id",
  "tv_credits.crew[].department",
  "tv_credits.crew[].episode_count",
  "tv_credits.crew[].first_air_date",
  "tv_credits.crew[].first_credit_air_date",
  "tv_credits.crew[].genre_ids",
  "tv_credits.crew[].id",
  "tv_credits.crew[].job",
  "tv_credits.crew[].name",
  "tv_credits.crew[].origin_country",
  "tv_credits.crew[].original_language",
  "tv_credits.crew[].original_name",
  "tv_credits.crew[].overview",
  "tv_credits.crew[].popularity",
  "tv_credits.crew[].poster_path",
  "tv_credits.crew[].softcore",
  "tv_credits.crew[].vote_average",
  "tv_credits.crew[].vote_count",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.external_ids' shape 1`] = `
[
  "facebook_id",
  "freebase_id",
  "freebase_mid",
  "id",
  "imdb_id",
  "instagram_id",
  "tiktok_id",
  "tvrage_id",
  "twitter_id",
  "wikidata_id",
  "youtube_id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.images' shape 1`] = `
[
  "id",
  "profiles",
  "profiles[].aspect_ratio",
  "profiles[].file_path",
  "profiles[].height",
  "profiles[].iso_3166_1",
  "profiles[].iso_639_1",
  "profiles[].vote_average",
  "profiles[].vote_count",
  "profiles[].width",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.movie_credits' shape 1`] = `
[
  "cast",
  "cast[].adult",
  "cast[].backdrop_path",
  "cast[].character",
  "cast[].credit_id",
  "cast[].genre_ids",
  "cast[].id",
  "cast[].order",
  "cast[].original_language",
  "cast[].original_title",
  "cast[].overview",
  "cast[].popularity",
  "cast[].poster_path",
  "cast[].release_date",
  "cast[].softcore",
  "cast[].title",
  "cast[].video",
  "cast[].vote_average",
  "cast[].vote_count",
  "crew",
  "crew[].adult",
  "crew[].backdrop_path",
  "crew[].credit_id",
  "crew[].department",
  "crew[].genre_ids",
  "crew[].id",
  "crew[].job",
  "crew[].original_language",
  "crew[].original_title",
  "crew[].overview",
  "crew[].popularity",
  "crew[].poster_path",
  "crew[].release_date",
  "crew[].softcore",
  "crew[].title",
  "crew[].video",
  "crew[].vote_average",
  "crew[].vote_count",
  "id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.tagged_images' shape 1`] = `
[
  "id",
  "page",
  "results",
  "results[].aspect_ratio",
  "results[].file_path",
  "results[].height",
  "results[].id",
  "results[].image_type",
  "results[].iso_3166_1",
  "results[].iso_639_1",
  "results[].media",
  "results[].media.adult",
  "results[].media.backdrop_path",
  "results[].media.genre_ids",
  "results[].media.id",
  "results[].media.media_type",
  "results[].media.original_language",
  "results[].media.original_title",
  "results[].media.overview",
  "results[].media.popularity",
  "results[].media.poster_path",
  "results[].media.release_date",
  "results[].media.softcore",
  "results[].media.title",
  "results[].media.video",
  "results[].media.vote_average",
  "results[].media.vote_count",
  "results[].media_type",
  "results[].vote_average",
  "results[].vote_count",
  "results[].width",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.translations' shape 1`] = `
[
  "id",
  "translations",
  "translations[].data",
  "translations[].data.biography",
  "translations[].data.name",
  "translations[].data.primary",
  "translations[].english_name",
  "translations[].iso_3166_1",
  "translations[].iso_639_1",
  "translations[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people.tv_credits' shape 1`] = `
[
  "cast",
  "cast[].adult",
  "cast[].backdrop_path",
  "cast[].character",
  "cast[].credit_id",
  "cast[].episode_count",
  "cast[].first_air_date",
  "cast[].first_credit_air_date",
  "cast[].genre_ids",
  "cast[].id",
  "cast[].name",
  "cast[].origin_country",
  "cast[].original_language",
  "cast[].original_name",
  "cast[].overview",
  "cast[].popularity",
  "cast[].poster_path",
  "cast[].softcore",
  "cast[].vote_average",
  "cast[].vote_count",
  "crew",
  "crew[].adult",
  "crew[].backdrop_path",
  "crew[].credit_id",
  "crew[].department",
  "crew[].episode_count",
  "crew[].first_air_date",
  "crew[].first_credit_air_date",
  "crew[].genre_ids",
  "crew[].id",
  "crew[].job",
  "crew[].name",
  "crew[].origin_country",
  "crew[].original_language",
  "crew[].original_name",
  "crew[].overview",
  "crew[].popularity",
  "crew[].poster_path",
  "crew[].softcore",
  "crew[].vote_average",
  "crew[].vote_count",
  "id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'people_lists.popular' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].gender",
  "results[].id",
  "results[].known_for",
  "results[].known_for[].adult",
  "results[].known_for[].backdrop_path",
  "results[].known_for[].first_air_date",
  "results[].known_for[].genre_ids",
  "results[].known_for[].id",
  "results[].known_for[].media_type",
  "results[].known_for[].name",
  "results[].known_for[].origin_country",
  "results[].known_for[].original_language",
  "results[].known_for[].original_name",
  "results[].known_for[].original_title",
  "results[].known_for[].overview",
  "results[].known_for[].popularity",
  "results[].known_for[].poster_path",
  "results[].known_for[].release_date",
  "results[].known_for[].softcore",
  "results[].known_for[].title",
  "results[].known_for[].video",
  "results[].known_for[].vote_average",
  "results[].known_for[].vote_count",
  "results[].known_for_department",
  "results[].name",
  "results[].original_name",
  "results[].popularity",
  "results[].profile_path",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'reviews.details' shape 1`] = `
[
  "author",
  "author_details",
  "author_details.avatar_path",
  "author_details.name",
  "author_details.rating",
  "author_details.username",
  "content",
  "created_at",
  "id",
  "iso_639_1",
  "media_id",
  "media_title",
  "media_type",
  "updated_at",
  "url",
]
`;

exports[`Schema drift (key-tree snapshots) > 'search.collections' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].id",
  "results[].name",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].poster_path",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'search.company' shape 1`] = `
[
  "page",
  "results",
  "results[].id",
  "results[].logo_path",
  "results[].name",
  "results[].origin_country",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'search.keyword' shape 1`] = `
[
  "page",
  "results",
  "results[].id",
  "results[].name",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'search.movies' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'search.multi' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].gender",
  "results[].genre_ids",
  "results[].id",
  "results[].known_for",
  "results[].known_for[].adult",
  "results[].known_for[].backdrop_path",
  "results[].known_for[].genre_ids",
  "results[].known_for[].id",
  "results[].known_for[].media_type",
  "results[].known_for[].original_language",
  "results[].known_for[].original_title",
  "results[].known_for[].overview",
  "results[].known_for[].popularity",
  "results[].known_for[].poster_path",
  "results[].known_for[].release_date",
  "results[].known_for[].softcore",
  "results[].known_for[].title",
  "results[].known_for[].video",
  "results[].known_for[].vote_average",
  "results[].known_for[].vote_count",
  "results[].known_for_department",
  "results[].media_type",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].profile_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'search.person' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].gender",
  "results[].id",
  "results[].known_for",
  "results[].known_for[].adult",
  "results[].known_for[].backdrop_path",
  "results[].known_for[].genre_ids",
  "results[].known_for[].id",
  "results[].known_for[].media_type",
  "results[].known_for[].original_language",
  "results[].known_for[].original_title",
  "results[].known_for[].overview",
  "results[].known_for[].popularity",
  "results[].known_for[].poster_path",
  "results[].known_for[].release_date",
  "results[].known_for[].softcore",
  "results[].known_for[].title",
  "results[].known_for[].video",
  "results[].known_for[].vote_average",
  "results[].known_for[].vote_count",
  "results[].known_for_department",
  "results[].name",
  "results[].original_name",
  "results[].popularity",
  "results[].profile_path",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'search.tv_series' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].softcore",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'trending.all' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].media_type",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'trending.movies' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].genre_ids",
  "results[].id",
  "results[].media_type",
  "results[].original_language",
  "results[].original_title",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].release_date",
  "results[].softcore",
  "results[].title",
  "results[].video",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'trending.people' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].gender",
  "results[].id",
  "results[].known_for_department",
  "results[].media_type",
  "results[].name",
  "results[].original_name",
  "results[].popularity",
  "results[].profile_path",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'trending.tv' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].media_type",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].softcore",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_episode_groups.details' shape 1`] = `
[
  "description",
  "episode_count",
  "group_count",
  "groups",
  "groups[].episodes",
  "groups[].episodes[].air_date",
  "groups[].episodes[].episode_number",
  "groups[].episodes[].episode_type",
  "groups[].episodes[].id",
  "groups[].episodes[].name",
  "groups[].episodes[].order",
  "groups[].episodes[].overview",
  "groups[].episodes[].production_code",
  "groups[].episodes[].runtime",
  "groups[].episodes[].season_number",
  "groups[].episodes[].show_id",
  "groups[].episodes[].still_path",
  "groups[].episodes[].vote_average",
  "groups[].episodes[].vote_count",
  "groups[].id",
  "groups[].locked",
  "groups[].name",
  "groups[].order",
  "id",
  "name",
  "network",
  "type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_episodes.changes' shape 1`] = `
[
  "changes",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_episodes.credits' shape 1`] = `
[
  "cast",
  "cast[].adult",
  "cast[].character",
  "cast[].credit_id",
  "cast[].gender",
  "cast[].id",
  "cast[].known_for_department",
  "cast[].name",
  "cast[].order",
  "cast[].original_name",
  "cast[].popularity",
  "cast[].profile_path",
  "crew",
  "crew[].adult",
  "crew[].credit_id",
  "crew[].department",
  "crew[].gender",
  "crew[].id",
  "crew[].job",
  "crew[].known_for_department",
  "crew[].name",
  "crew[].original_name",
  "crew[].popularity",
  "crew[].profile_path",
  "guest_stars",
  "guest_stars[].adult",
  "guest_stars[].character",
  "guest_stars[].credit_id",
  "guest_stars[].gender",
  "guest_stars[].id",
  "guest_stars[].known_for_department",
  "guest_stars[].name",
  "guest_stars[].order",
  "guest_stars[].original_name",
  "guest_stars[].popularity",
  "guest_stars[].profile_path",
  "id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_episodes.details' shape 1`] = `
[
  "air_date",
  "crew",
  "crew[].adult",
  "crew[].credit_id",
  "crew[].department",
  "crew[].gender",
  "crew[].id",
  "crew[].job",
  "crew[].known_for_department",
  "crew[].name",
  "crew[].original_name",
  "crew[].popularity",
  "crew[].profile_path",
  "episode_number",
  "episode_type",
  "guest_stars",
  "guest_stars[].adult",
  "guest_stars[].character",
  "guest_stars[].credit_id",
  "guest_stars[].gender",
  "guest_stars[].id",
  "guest_stars[].known_for_department",
  "guest_stars[].name",
  "guest_stars[].order",
  "guest_stars[].original_name",
  "guest_stars[].popularity",
  "guest_stars[].profile_path",
  "id",
  "name",
  "overview",
  "production_code",
  "runtime",
  "season_number",
  "still_path",
  "vote_average",
  "vote_count",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_episodes.details+append' shape 1`] = `
[
  "air_date",
  "credits",
  "credits.cast",
  "credits.cast[].adult",
  "credits.cast[].character",
  "credits.cast[].credit_id",
  "credits.cast[].gender",
  "credits.cast[].id",
  "credits.cast[].known_for_department",
  "credits.cast[].name",
  "credits.cast[].order",
  "credits.cast[].original_name",
  "credits.cast[].popularity",
  "credits.cast[].profile_path",
  "credits.crew",
  "credits.crew[].adult",
  "credits.crew[].credit_id",
  "credits.crew[].department",
  "credits.crew[].gender",
  "credits.crew[].id",
  "credits.crew[].job",
  "credits.crew[].known_for_department",
  "credits.crew[].name",
  "credits.crew[].original_name",
  "credits.crew[].popularity",
  "credits.crew[].profile_path",
  "credits.guest_stars",
  "credits.guest_stars[].adult",
  "credits.guest_stars[].character",
  "credits.guest_stars[].credit_id",
  "credits.guest_stars[].gender",
  "credits.guest_stars[].id",
  "credits.guest_stars[].known_for_department",
  "credits.guest_stars[].name",
  "credits.guest_stars[].order",
  "credits.guest_stars[].original_name",
  "credits.guest_stars[].popularity",
  "credits.guest_stars[].profile_path",
  "crew",
  "crew[].adult",
  "crew[].credit_id",
  "crew[].department",
  "crew[].gender",
  "crew[].id",
  "crew[].job",
  "crew[].known_for_department",
  "crew[].name",
  "crew[].original_name",
  "crew[].popularity",
  "crew[].profile_path",
  "episode_number",
  "episode_type",
  "external_ids",
  "external_ids.freebase_id",
  "external_ids.freebase_mid",
  "external_ids.imdb_id",
  "external_ids.tvdb_id",
  "external_ids.tvrage_id",
  "external_ids.wikidata_id",
  "guest_stars",
  "guest_stars[].adult",
  "guest_stars[].character",
  "guest_stars[].credit_id",
  "guest_stars[].gender",
  "guest_stars[].id",
  "guest_stars[].known_for_department",
  "guest_stars[].name",
  "guest_stars[].order",
  "guest_stars[].original_name",
  "guest_stars[].popularity",
  "guest_stars[].profile_path",
  "id",
  "images",
  "images.stills",
  "images.stills[].aspect_ratio",
  "images.stills[].file_path",
  "images.stills[].height",
  "images.stills[].iso_3166_1",
  "images.stills[].iso_639_1",
  "images.stills[].vote_average",
  "images.stills[].vote_count",
  "images.stills[].width",
  "name",
  "overview",
  "production_code",
  "runtime",
  "season_number",
  "still_path",
  "translations",
  "translations.translations",
  "translations.translations[].data",
  "translations.translations[].data.name",
  "translations.translations[].data.overview",
  "translations.translations[].english_name",
  "translations.translations[].iso_3166_1",
  "translations.translations[].iso_639_1",
  "translations.translations[].name",
  "videos",
  "videos.results",
  "videos.results[].id",
  "videos.results[].iso_3166_1",
  "videos.results[].iso_639_1",
  "videos.results[].key",
  "videos.results[].name",
  "videos.results[].official",
  "videos.results[].published_at",
  "videos.results[].site",
  "videos.results[].size",
  "videos.results[].type",
  "vote_average",
  "vote_count",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_episodes.external_ids' shape 1`] = `
[
  "freebase_id",
  "freebase_mid",
  "id",
  "imdb_id",
  "tvdb_id",
  "tvrage_id",
  "wikidata_id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_episodes.images' shape 1`] = `
[
  "id",
  "stills",
  "stills[].aspect_ratio",
  "stills[].file_path",
  "stills[].height",
  "stills[].iso_3166_1",
  "stills[].iso_639_1",
  "stills[].vote_average",
  "stills[].vote_count",
  "stills[].width",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_episodes.translations' shape 1`] = `
[
  "id",
  "translations",
  "translations[].data",
  "translations[].data.name",
  "translations[].data.overview",
  "translations[].english_name",
  "translations[].iso_3166_1",
  "translations[].iso_639_1",
  "translations[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_episodes.videos' shape 1`] = `
[
  "id",
  "results",
  "results[].id",
  "results[].iso_3166_1",
  "results[].iso_639_1",
  "results[].key",
  "results[].name",
  "results[].official",
  "results[].published_at",
  "results[].site",
  "results[].size",
  "results[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_lists.airing_today' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].softcore",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_lists.on_the_air' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].softcore",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_lists.popular' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].softcore",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_lists.top_rated' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].softcore",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.aggregate_credits' shape 1`] = `
[
  "cast",
  "cast[].adult",
  "cast[].gender",
  "cast[].id",
  "cast[].known_for_department",
  "cast[].name",
  "cast[].order",
  "cast[].original_name",
  "cast[].popularity",
  "cast[].profile_path",
  "cast[].roles",
  "cast[].roles[].character",
  "cast[].roles[].credit_id",
  "cast[].roles[].episode_count",
  "cast[].total_episode_count",
  "crew",
  "crew[].adult",
  "crew[].department",
  "crew[].gender",
  "crew[].id",
  "crew[].jobs",
  "crew[].jobs[].credit_id",
  "crew[].jobs[].episode_count",
  "crew[].jobs[].job",
  "crew[].known_for_department",
  "crew[].name",
  "crew[].original_name",
  "crew[].popularity",
  "crew[].profile_path",
  "crew[].total_episode_count",
  "id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.changes' shape 1`] = `
[
  "changes",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.credits' shape 1`] = `
[
  "cast",
  "cast[].adult",
  "cast[].character",
  "cast[].credit_id",
  "cast[].gender",
  "cast[].id",
  "cast[].known_for_department",
  "cast[].name",
  "cast[].order",
  "cast[].original_name",
  "cast[].popularity",
  "cast[].profile_path",
  "crew",
  "crew[].adult",
  "crew[].credit_id",
  "crew[].department",
  "crew[].gender",
  "crew[].id",
  "crew[].job",
  "crew[].known_for_department",
  "crew[].name",
  "crew[].original_name",
  "crew[].popularity",
  "crew[].profile_path",
  "id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.details' shape 1`] = `
[
  "_id",
  "air_date",
  "episodes",
  "episodes[].air_date",
  "episodes[].crew",
  "episodes[].crew[].adult",
  "episodes[].crew[].credit_id",
  "episodes[].crew[].department",
  "episodes[].crew[].gender",
  "episodes[].crew[].id",
  "episodes[].crew[].job",
  "episodes[].crew[].known_for_department",
  "episodes[].crew[].name",
  "episodes[].crew[].original_name",
  "episodes[].crew[].popularity",
  "episodes[].crew[].profile_path",
  "episodes[].episode_number",
  "episodes[].episode_type",
  "episodes[].guest_stars",
  "episodes[].guest_stars[].adult",
  "episodes[].guest_stars[].character",
  "episodes[].guest_stars[].credit_id",
  "episodes[].guest_stars[].gender",
  "episodes[].guest_stars[].id",
  "episodes[].guest_stars[].known_for_department",
  "episodes[].guest_stars[].name",
  "episodes[].guest_stars[].order",
  "episodes[].guest_stars[].original_name",
  "episodes[].guest_stars[].popularity",
  "episodes[].guest_stars[].profile_path",
  "episodes[].id",
  "episodes[].name",
  "episodes[].overview",
  "episodes[].production_code",
  "episodes[].runtime",
  "episodes[].season_number",
  "episodes[].show_id",
  "episodes[].still_path",
  "episodes[].vote_average",
  "episodes[].vote_count",
  "id",
  "name",
  "networks",
  "networks[].id",
  "networks[].logo_path",
  "networks[].name",
  "networks[].origin_country",
  "overview",
  "poster_path",
  "season_number",
  "vote_average",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.details+append' shape 1`] = `
[
  "_id",
  "aggregate_credits",
  "aggregate_credits.cast",
  "aggregate_credits.cast[].adult",
  "aggregate_credits.cast[].gender",
  "aggregate_credits.cast[].id",
  "aggregate_credits.cast[].known_for_department",
  "aggregate_credits.cast[].name",
  "aggregate_credits.cast[].order",
  "aggregate_credits.cast[].original_name",
  "aggregate_credits.cast[].popularity",
  "aggregate_credits.cast[].profile_path",
  "aggregate_credits.cast[].roles",
  "aggregate_credits.cast[].roles[].character",
  "aggregate_credits.cast[].roles[].credit_id",
  "aggregate_credits.cast[].roles[].episode_count",
  "aggregate_credits.cast[].total_episode_count",
  "aggregate_credits.crew",
  "aggregate_credits.crew[].adult",
  "aggregate_credits.crew[].department",
  "aggregate_credits.crew[].gender",
  "aggregate_credits.crew[].id",
  "aggregate_credits.crew[].jobs",
  "aggregate_credits.crew[].jobs[].credit_id",
  "aggregate_credits.crew[].jobs[].episode_count",
  "aggregate_credits.crew[].jobs[].job",
  "aggregate_credits.crew[].known_for_department",
  "aggregate_credits.crew[].name",
  "aggregate_credits.crew[].original_name",
  "aggregate_credits.crew[].popularity",
  "aggregate_credits.crew[].profile_path",
  "aggregate_credits.crew[].total_episode_count",
  "air_date",
  "credits",
  "credits.cast",
  "credits.cast[].adult",
  "credits.cast[].character",
  "credits.cast[].credit_id",
  "credits.cast[].gender",
  "credits.cast[].id",
  "credits.cast[].known_for_department",
  "credits.cast[].name",
  "credits.cast[].order",
  "credits.cast[].original_name",
  "credits.cast[].popularity",
  "credits.cast[].profile_path",
  "credits.crew",
  "credits.crew[].adult",
  "credits.crew[].credit_id",
  "credits.crew[].department",
  "credits.crew[].gender",
  "credits.crew[].id",
  "credits.crew[].job",
  "credits.crew[].known_for_department",
  "credits.crew[].name",
  "credits.crew[].original_name",
  "credits.crew[].popularity",
  "credits.crew[].profile_path",
  "episodes",
  "episodes[].air_date",
  "episodes[].crew",
  "episodes[].crew[].adult",
  "episodes[].crew[].credit_id",
  "episodes[].crew[].department",
  "episodes[].crew[].gender",
  "episodes[].crew[].id",
  "episodes[].crew[].job",
  "episodes[].crew[].known_for_department",
  "episodes[].crew[].name",
  "episodes[].crew[].original_name",
  "episodes[].crew[].popularity",
  "episodes[].crew[].profile_path",
  "episodes[].episode_number",
  "episodes[].episode_type",
  "episodes[].guest_stars",
  "episodes[].guest_stars[].adult",
  "episodes[].guest_stars[].character",
  "episodes[].guest_stars[].credit_id",
  "episodes[].guest_stars[].gender",
  "episodes[].guest_stars[].id",
  "episodes[].guest_stars[].known_for_department",
  "episodes[].guest_stars[].name",
  "episodes[].guest_stars[].order",
  "episodes[].guest_stars[].original_name",
  "episodes[].guest_stars[].popularity",
  "episodes[].guest_stars[].profile_path",
  "episodes[].id",
  "episodes[].name",
  "episodes[].overview",
  "episodes[].production_code",
  "episodes[].runtime",
  "episodes[].season_number",
  "episodes[].show_id",
  "episodes[].still_path",
  "episodes[].vote_average",
  "episodes[].vote_count",
  "external_ids",
  "external_ids.freebase_id",
  "external_ids.freebase_mid",
  "external_ids.tvdb_id",
  "external_ids.tvrage_id",
  "external_ids.wikidata_id",
  "id",
  "images",
  "images.posters",
  "images.posters[].aspect_ratio",
  "images.posters[].file_path",
  "images.posters[].height",
  "images.posters[].iso_3166_1",
  "images.posters[].iso_639_1",
  "images.posters[].vote_average",
  "images.posters[].vote_count",
  "images.posters[].width",
  "name",
  "networks",
  "networks[].id",
  "networks[].logo_path",
  "networks[].name",
  "networks[].origin_country",
  "overview",
  "poster_path",
  "season_number",
  "translations",
  "translations.translations",
  "translations.translations[].data",
  "translations.translations[].data.name",
  "translations.translations[].data.overview",
  "translations.translations[].english_name",
  "translations.translations[].iso_3166_1",
  "translations.translations[].iso_639_1",
  "translations.translations[].name",
  "videos",
  "videos.results",
  "videos.results[].id",
  "videos.results[].iso_3166_1",
  "videos.results[].iso_639_1",
  "videos.results[].key",
  "videos.results[].name",
  "videos.results[].official",
  "videos.results[].published_at",
  "videos.results[].site",
  "videos.results[].size",
  "videos.results[].type",
  "vote_average",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.external_ids' shape 1`] = `
[
  "freebase_id",
  "freebase_mid",
  "id",
  "tvdb_id",
  "tvrage_id",
  "wikidata_id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.images' shape 1`] = `
[
  "id",
  "posters",
  "posters[].aspect_ratio",
  "posters[].file_path",
  "posters[].height",
  "posters[].iso_3166_1",
  "posters[].iso_639_1",
  "posters[].vote_average",
  "posters[].vote_count",
  "posters[].width",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.translations' shape 1`] = `
[
  "id",
  "translations",
  "translations[].data",
  "translations[].data.name",
  "translations[].data.overview",
  "translations[].english_name",
  "translations[].iso_3166_1",
  "translations[].iso_639_1",
  "translations[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.videos' shape 1`] = `
[
  "id",
  "results",
  "results[].id",
  "results[].iso_3166_1",
  "results[].iso_639_1",
  "results[].key",
  "results[].name",
  "results[].official",
  "results[].published_at",
  "results[].site",
  "results[].size",
  "results[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_seasons.watch_providers' shape 1`] = `
[
  "id",
  "results",
  "results.{}",
  "results.{}.buy",
  "results.{}.buy[].display_priority",
  "results.{}.buy[].logo_path",
  "results.{}.buy[].provider_id",
  "results.{}.buy[].provider_name",
  "results.{}.flatrate",
  "results.{}.flatrate[].display_priority",
  "results.{}.flatrate[].logo_path",
  "results.{}.flatrate[].provider_id",
  "results.{}.flatrate[].provider_name",
  "results.{}.free",
  "results.{}.free[].display_priority",
  "results.{}.free[].logo_path",
  "results.{}.free[].provider_id",
  "results.{}.free[].provider_name",
  "results.{}.link",
  "results.{}.rent",
  "results.{}.rent[].display_priority",
  "results.{}.rent[].logo_path",
  "results.{}.rent[].provider_id",
  "results.{}.rent[].provider_name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.aggregate_credits' shape 1`] = `
[
  "cast",
  "cast[].adult",
  "cast[].gender",
  "cast[].id",
  "cast[].known_for_department",
  "cast[].name",
  "cast[].order",
  "cast[].original_name",
  "cast[].popularity",
  "cast[].profile_path",
  "cast[].roles",
  "cast[].roles[].character",
  "cast[].roles[].credit_id",
  "cast[].roles[].episode_count",
  "cast[].total_episode_count",
  "crew",
  "crew[].adult",
  "crew[].department",
  "crew[].gender",
  "crew[].id",
  "crew[].jobs",
  "crew[].jobs[].credit_id",
  "crew[].jobs[].episode_count",
  "crew[].jobs[].job",
  "crew[].known_for_department",
  "crew[].name",
  "crew[].original_name",
  "crew[].popularity",
  "crew[].profile_path",
  "crew[].total_episode_count",
  "id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.alternative_titles' shape 1`] = `
[
  "id",
  "results",
  "results[].iso_3166_1",
  "results[].title",
  "results[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.changes' shape 1`] = `
[
  "changes",
  "changes[].items",
  "changes[].items[].action",
  "changes[].items[].id",
  "changes[].items[].iso_3166_1",
  "changes[].items[].iso_639_1",
  "changes[].items[].original_value",
  "changes[].items[].original_value.add_to_every_season",
  "changes[].items[].original_value.character",
  "changes[].items[].original_value.credit_id",
  "changes[].items[].original_value.id",
  "changes[].items[].original_value.name",
  "changes[].items[].original_value.order",
  "changes[].items[].original_value.person_id",
  "changes[].items[].original_value.season_id",
  "changes[].items[].time",
  "changes[].items[].value",
  "changes[].items[].value.add_to_every_season",
  "changes[].items[].value.character",
  "changes[].items[].value.credit_id",
  "changes[].items[].value.group",
  "changes[].items[].value.id",
  "changes[].items[].value.iso_3166_1",
  "changes[].items[].value.key",
  "changes[].items[].value.name",
  "changes[].items[].value.order",
  "changes[].items[].value.person_id",
  "changes[].items[].value.poster",
  "changes[].items[].value.poster.file_path",
  "changes[].items[].value.season_id",
  "changes[].items[].value.site",
  "changes[].items[].value.size",
  "changes[].items[].value.title",
  "changes[].items[].value.type",
  "changes[].key",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.content_ratings' shape 1`] = `
[
  "id",
  "results",
  "results[].descriptors",
  "results[].iso_3166_1",
  "results[].rating",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.credits' shape 1`] = `
[
  "cast",
  "cast[].adult",
  "cast[].character",
  "cast[].credit_id",
  "cast[].gender",
  "cast[].id",
  "cast[].known_for_department",
  "cast[].name",
  "cast[].order",
  "cast[].original_name",
  "cast[].popularity",
  "cast[].profile_path",
  "crew",
  "crew[].adult",
  "crew[].credit_id",
  "crew[].department",
  "crew[].gender",
  "crew[].id",
  "crew[].job",
  "crew[].known_for_department",
  "crew[].name",
  "crew[].original_name",
  "crew[].popularity",
  "crew[].profile_path",
  "id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.details' shape 1`] = `
[
  "adult",
  "backdrop_path",
  "created_by",
  "created_by[].credit_id",
  "created_by[].gender",
  "created_by[].id",
  "created_by[].name",
  "created_by[].original_name",
  "created_by[].profile_path",
  "episode_run_time",
  "first_air_date",
  "genres",
  "genres[].id",
  "genres[].name",
  "homepage",
  "id",
  "in_production",
  "languages",
  "last_air_date",
  "last_episode_to_air",
  "last_episode_to_air.air_date",
  "last_episode_to_air.episode_number",
  "last_episode_to_air.episode_type",
  "last_episode_to_air.id",
  "last_episode_to_air.name",
  "last_episode_to_air.overview",
  "last_episode_to_air.production_code",
  "last_episode_to_air.runtime",
  "last_episode_to_air.season_number",
  "last_episode_to_air.show_id",
  "last_episode_to_air.still_path",
  "last_episode_to_air.vote_average",
  "last_episode_to_air.vote_count",
  "name",
  "networks",
  "networks[].id",
  "networks[].logo_path",
  "networks[].name",
  "networks[].origin_country",
  "next_episode_to_air",
  "number_of_episodes",
  "number_of_seasons",
  "origin_country",
  "original_language",
  "original_name",
  "overview",
  "popularity",
  "poster_path",
  "production_companies",
  "production_companies[].id",
  "production_companies[].logo_path",
  "production_companies[].name",
  "production_companies[].origin_country",
  "production_countries",
  "production_countries[].iso_3166_1",
  "production_countries[].name",
  "seasons",
  "seasons[].air_date",
  "seasons[].episode_count",
  "seasons[].id",
  "seasons[].name",
  "seasons[].overview",
  "seasons[].poster_path",
  "seasons[].season_number",
  "seasons[].vote_average",
  "softcore",
  "spoken_languages",
  "spoken_languages[].english_name",
  "spoken_languages[].iso_639_1",
  "spoken_languages[].name",
  "status",
  "tagline",
  "type",
  "vote_average",
  "vote_count",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.details+append' shape 1`] = `
[
  "adult",
  "aggregate_credits",
  "aggregate_credits.cast",
  "aggregate_credits.cast[].adult",
  "aggregate_credits.cast[].gender",
  "aggregate_credits.cast[].id",
  "aggregate_credits.cast[].known_for_department",
  "aggregate_credits.cast[].name",
  "aggregate_credits.cast[].order",
  "aggregate_credits.cast[].original_name",
  "aggregate_credits.cast[].popularity",
  "aggregate_credits.cast[].profile_path",
  "aggregate_credits.cast[].roles",
  "aggregate_credits.cast[].roles[].character",
  "aggregate_credits.cast[].roles[].credit_id",
  "aggregate_credits.cast[].roles[].episode_count",
  "aggregate_credits.cast[].total_episode_count",
  "aggregate_credits.crew",
  "aggregate_credits.crew[].adult",
  "aggregate_credits.crew[].department",
  "aggregate_credits.crew[].gender",
  "aggregate_credits.crew[].id",
  "aggregate_credits.crew[].jobs",
  "aggregate_credits.crew[].jobs[].credit_id",
  "aggregate_credits.crew[].jobs[].episode_count",
  "aggregate_credits.crew[].jobs[].job",
  "aggregate_credits.crew[].known_for_department",
  "aggregate_credits.crew[].name",
  "aggregate_credits.crew[].original_name",
  "aggregate_credits.crew[].popularity",
  "aggregate_credits.crew[].profile_path",
  "aggregate_credits.crew[].total_episode_count",
  "alternative_titles",
  "alternative_titles.results",
  "alternative_titles.results[].iso_3166_1",
  "alternative_titles.results[].title",
  "alternative_titles.results[].type",
  "backdrop_path",
  "changes",
  "changes.changes",
  "changes.changes[].items",
  "changes.changes[].items[].action",
  "changes.changes[].items[].id",
  "changes.changes[].items[].iso_3166_1",
  "changes.changes[].items[].iso_639_1",
  "changes.changes[].items[].original_value",
  "changes.changes[].items[].original_value.poster",
  "changes.changes[].items[].original_value.poster.file_path",
  "changes.changes[].items[].original_value.poster.iso_3166_1",
  "changes.changes[].items[].original_value.poster.iso_639_1",
  "changes.changes[].items[].time",
  "changes.changes[].items[].value",
  "changes.changes[].items[].value.poster",
  "changes.changes[].items[].value.poster.file_path",
  "changes.changes[].items[].value.poster.iso_3166_1",
  "changes.changes[].items[].value.poster.iso_639_1",
  "changes.changes[].key",
  "content_ratings",
  "content_ratings.results",
  "content_ratings.results[].descriptors",
  "content_ratings.results[].iso_3166_1",
  "content_ratings.results[].rating",
  "created_by",
  "created_by[].credit_id",
  "created_by[].gender",
  "created_by[].id",
  "created_by[].name",
  "created_by[].original_name",
  "created_by[].profile_path",
  "credits",
  "credits.cast",
  "credits.cast[].adult",
  "credits.cast[].character",
  "credits.cast[].credit_id",
  "credits.cast[].gender",
  "credits.cast[].id",
  "credits.cast[].known_for_department",
  "credits.cast[].name",
  "credits.cast[].order",
  "credits.cast[].original_name",
  "credits.cast[].popularity",
  "credits.cast[].profile_path",
  "credits.crew",
  "credits.crew[].adult",
  "credits.crew[].credit_id",
  "credits.crew[].department",
  "credits.crew[].gender",
  "credits.crew[].id",
  "credits.crew[].job",
  "credits.crew[].known_for_department",
  "credits.crew[].name",
  "credits.crew[].original_name",
  "credits.crew[].popularity",
  "credits.crew[].profile_path",
  "episode_groups",
  "episode_groups.results",
  "episode_groups.results[].description",
  "episode_groups.results[].episode_count",
  "episode_groups.results[].group_count",
  "episode_groups.results[].id",
  "episode_groups.results[].name",
  "episode_groups.results[].network",
  "episode_groups.results[].type",
  "episode_run_time",
  "external_ids",
  "external_ids.facebook_id",
  "external_ids.freebase_id",
  "external_ids.freebase_mid",
  "external_ids.imdb_id",
  "external_ids.instagram_id",
  "external_ids.tvdb_id",
  "external_ids.tvrage_id",
  "external_ids.twitter_id",
  "external_ids.wikidata_id",
  "first_air_date",
  "genres",
  "genres[].id",
  "genres[].name",
  "homepage",
  "id",
  "images",
  "images.backdrops",
  "images.backdrops[].aspect_ratio",
  "images.backdrops[].file_path",
  "images.backdrops[].height",
  "images.backdrops[].iso_3166_1",
  "images.backdrops[].iso_639_1",
  "images.backdrops[].vote_average",
  "images.backdrops[].vote_count",
  "images.backdrops[].width",
  "images.logos",
  "images.logos[].aspect_ratio",
  "images.logos[].file_path",
  "images.logos[].height",
  "images.logos[].iso_3166_1",
  "images.logos[].iso_639_1",
  "images.logos[].vote_average",
  "images.logos[].vote_count",
  "images.logos[].width",
  "images.posters",
  "images.posters[].aspect_ratio",
  "images.posters[].file_path",
  "images.posters[].height",
  "images.posters[].iso_3166_1",
  "images.posters[].iso_639_1",
  "images.posters[].vote_average",
  "images.posters[].vote_count",
  "images.posters[].width",
  "in_production",
  "keywords",
  "keywords.results",
  "keywords.results[].id",
  "keywords.results[].name",
  "languages",
  "last_air_date",
  "last_episode_to_air",
  "last_episode_to_air.air_date",
  "last_episode_to_air.episode_number",
  "last_episode_to_air.episode_type",
  "last_episode_to_air.id",
  "last_episode_to_air.name",
  "last_episode_to_air.overview",
  "last_episode_to_air.production_code",
  "last_episode_to_air.runtime",
  "last_episode_to_air.season_number",
  "last_episode_to_air.show_id",
  "last_episode_to_air.still_path",
  "last_episode_to_air.vote_average",
  "last_episode_to_air.vote_count",
  "lists",
  "lists.page",
  "lists.results",
  "lists.results[].description",
  "lists.results[].favorite_count",
  "lists.results[].id",
  "lists.results[].iso_3166_1",
  "lists.results[].iso_639_1",
  "lists.results[].item_count",
  "lists.results[].name",
  "lists.results[].poster_path",
  "lists.total_pages",
  "lists.total_results",
  "name",
  "networks",
  "networks[].id",
  "networks[].logo_path",
  "networks[].name",
  "networks[].origin_country",
  "next_episode_to_air",
  "number_of_episodes",
  "number_of_seasons",
  "origin_country",
  "original_language",
  "original_name",
  "overview",
  "popularity",
  "poster_path",
  "production_companies",
  "production_companies[].id",
  "production_companies[].logo_path",
  "production_companies[].name",
  "production_companies[].origin_country",
  "production_countries",
  "production_countries[].iso_3166_1",
  "production_countries[].name",
  "recommendations",
  "recommendations.page",
  "recommendations.results",
  "recommendations.results[].adult",
  "recommendations.results[].backdrop_path",
  "recommendations.results[].first_air_date",
  "recommendations.results[].genre_ids",
  "recommendations.results[].id",
  "recommendations.results[].media_type",
  "recommendations.results[].name",
  "recommendations.results[].origin_country",
  "recommendations.results[].original_language",
  "recommendations.results[].original_name",
  "recommendations.results[].overview",
  "recommendations.results[].popularity",
  "recommendations.results[].poster_path",
  "recommendations.results[].softcore",
  "recommendations.results[].vote_average",
  "recommendations.results[].vote_count",
  "recommendations.total_pages",
  "recommendations.total_results",
  "reviews",
  "reviews.page",
  "reviews.results",
  "reviews.results[].author",
  "reviews.results[].author_details",
  "reviews.results[].author_details.avatar_path",
  "reviews.results[].author_details.name",
  "reviews.results[].author_details.rating",
  "reviews.results[].author_details.username",
  "reviews.results[].content",
  "reviews.results[].created_at",
  "reviews.results[].id",
  "reviews.results[].updated_at",
  "reviews.results[].url",
  "reviews.total_pages",
  "reviews.total_results",
  "screened_theatrically",
  "screened_theatrically.results",
  "seasons",
  "seasons[].air_date",
  "seasons[].episode_count",
  "seasons[].id",
  "seasons[].name",
  "seasons[].overview",
  "seasons[].poster_path",
  "seasons[].season_number",
  "seasons[].vote_average",
  "similar",
  "similar.page",
  "similar.results",
  "similar.results[].adult",
  "similar.results[].backdrop_path",
  "similar.results[].first_air_date",
  "similar.results[].genre_ids",
  "similar.results[].id",
  "similar.results[].name",
  "similar.results[].origin_country",
  "similar.results[].original_language",
  "similar.results[].original_name",
  "similar.results[].overview",
  "similar.results[].popularity",
  "similar.results[].poster_path",
  "similar.results[].softcore",
  "similar.results[].vote_average",
  "similar.results[].vote_count",
  "similar.total_pages",
  "similar.total_results",
  "softcore",
  "spoken_languages",
  "spoken_languages[].english_name",
  "spoken_languages[].iso_639_1",
  "spoken_languages[].name",
  "status",
  "tagline",
  "translations",
  "translations.translations",
  "translations.translations[].data",
  "translations.translations[].data.homepage",
  "translations.translations[].data.name",
  "translations.translations[].data.overview",
  "translations.translations[].data.tagline",
  "translations.translations[].english_name",
  "translations.translations[].iso_3166_1",
  "translations.translations[].iso_639_1",
  "translations.translations[].name",
  "type",
  "videos",
  "videos.results",
  "videos.results[].id",
  "videos.results[].iso_3166_1",
  "videos.results[].iso_639_1",
  "videos.results[].key",
  "videos.results[].name",
  "videos.results[].official",
  "videos.results[].published_at",
  "videos.results[].site",
  "videos.results[].size",
  "videos.results[].type",
  "vote_average",
  "vote_count",
  "watch/providers",
  "watch/providers.results",
  "watch/providers.results.{}",
  "watch/providers.results.{}.ads",
  "watch/providers.results.{}.ads[].display_priority",
  "watch/providers.results.{}.ads[].logo_path",
  "watch/providers.results.{}.ads[].provider_id",
  "watch/providers.results.{}.ads[].provider_name",
  "watch/providers.results.{}.buy",
  "watch/providers.results.{}.buy[].display_priority",
  "watch/providers.results.{}.buy[].logo_path",
  "watch/providers.results.{}.buy[].provider_id",
  "watch/providers.results.{}.buy[].provider_name",
  "watch/providers.results.{}.flatrate",
  "watch/providers.results.{}.flatrate[].display_priority",
  "watch/providers.results.{}.flatrate[].logo_path",
  "watch/providers.results.{}.flatrate[].provider_id",
  "watch/providers.results.{}.flatrate[].provider_name",
  "watch/providers.results.{}.free",
  "watch/providers.results.{}.free[].display_priority",
  "watch/providers.results.{}.free[].logo_path",
  "watch/providers.results.{}.free[].provider_id",
  "watch/providers.results.{}.free[].provider_name",
  "watch/providers.results.{}.link",
  "watch/providers.results.{}.rent",
  "watch/providers.results.{}.rent[].display_priority",
  "watch/providers.results.{}.rent[].logo_path",
  "watch/providers.results.{}.rent[].provider_id",
  "watch/providers.results.{}.rent[].provider_name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.episode_groups' shape 1`] = `
[
  "id",
  "results",
  "results[].description",
  "results[].episode_count",
  "results[].group_count",
  "results[].id",
  "results[].name",
  "results[].network",
  "results[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.external_ids' shape 1`] = `
[
  "facebook_id",
  "freebase_id",
  "freebase_mid",
  "id",
  "imdb_id",
  "instagram_id",
  "tvdb_id",
  "tvrage_id",
  "twitter_id",
  "wikidata_id",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.images' shape 1`] = `
[
  "backdrops",
  "backdrops[].aspect_ratio",
  "backdrops[].file_path",
  "backdrops[].height",
  "backdrops[].iso_3166_1",
  "backdrops[].iso_639_1",
  "backdrops[].vote_average",
  "backdrops[].vote_count",
  "backdrops[].width",
  "id",
  "logos",
  "logos[].aspect_ratio",
  "logos[].file_path",
  "logos[].height",
  "logos[].iso_3166_1",
  "logos[].iso_639_1",
  "logos[].vote_average",
  "logos[].vote_count",
  "logos[].width",
  "posters",
  "posters[].aspect_ratio",
  "posters[].file_path",
  "posters[].height",
  "posters[].iso_3166_1",
  "posters[].iso_639_1",
  "posters[].vote_average",
  "posters[].vote_count",
  "posters[].width",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.keywords' shape 1`] = `
[
  "id",
  "results",
  "results[].id",
  "results[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.lists' shape 1`] = `
[
  "id",
  "page",
  "results",
  "results[].description",
  "results[].favorite_count",
  "results[].id",
  "results[].iso_3166_1",
  "results[].iso_639_1",
  "results[].item_count",
  "results[].name",
  "results[].poster_path",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.recommendations' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].media_type",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].softcore",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.reviews' shape 1`] = `
[
  "id",
  "page",
  "results",
  "results[].author",
  "results[].author_details",
  "results[].author_details.avatar_path",
  "results[].author_details.name",
  "results[].author_details.rating",
  "results[].author_details.username",
  "results[].content",
  "results[].created_at",
  "results[].id",
  "results[].updated_at",
  "results[].url",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.screened_theatrically' shape 1`] = `
[
  "id",
  "results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.similar' shape 1`] = `
[
  "page",
  "results",
  "results[].adult",
  "results[].backdrop_path",
  "results[].first_air_date",
  "results[].genre_ids",
  "results[].id",
  "results[].name",
  "results[].origin_country",
  "results[].original_language",
  "results[].original_name",
  "results[].overview",
  "results[].popularity",
  "results[].poster_path",
  "results[].softcore",
  "results[].vote_average",
  "results[].vote_count",
  "total_pages",
  "total_results",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.translations' shape 1`] = `
[
  "id",
  "translations",
  "translations[].data",
  "translations[].data.homepage",
  "translations[].data.name",
  "translations[].data.overview",
  "translations[].data.tagline",
  "translations[].english_name",
  "translations[].iso_3166_1",
  "translations[].iso_639_1",
  "translations[].name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.videos' shape 1`] = `
[
  "id",
  "results",
  "results[].id",
  "results[].iso_3166_1",
  "results[].iso_639_1",
  "results[].key",
  "results[].name",
  "results[].official",
  "results[].published_at",
  "results[].site",
  "results[].size",
  "results[].type",
]
`;

exports[`Schema drift (key-tree snapshots) > 'tv_series.watch_providers' shape 1`] = `
[
  "id",
  "results",
  "results.{}",
  "results.{}.ads",
  "results.{}.ads[].display_priority",
  "results.{}.ads[].logo_path",
  "results.{}.ads[].provider_id",
  "results.{}.ads[].provider_name",
  "results.{}.buy",
  "results.{}.buy[].display_priority",
  "results.{}.buy[].logo_path",
  "results.{}.buy[].provider_id",
  "results.{}.buy[].provider_name",
  "results.{}.flatrate",
  "results.{}.flatrate[].display_priority",
  "results.{}.flatrate[].logo_path",
  "results.{}.flatrate[].provider_id",
  "results.{}.flatrate[].provider_name",
  "results.{}.free",
  "results.{}.free[].display_priority",
  "results.{}.free[].logo_path",
  "results.{}.free[].provider_id",
  "results.{}.free[].provider_name",
  "results.{}.link",
  "results.{}.rent",
  "results.{}.rent[].display_priority",
  "results.{}.rent[].logo_path",
  "results.{}.rent[].provider_id",
  "results.{}.rent[].provider_name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'watch_providers.available_regions' shape 1`] = `
[
  "results",
  "results[].english_name",
  "results[].iso_3166_1",
  "results[].native_name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'watch_providers.movie_providers' shape 1`] = `
[
  "results",
  "results[].display_priorities",
  "results[].display_priorities.{}",
  "results[].display_priority",
  "results[].logo_path",
  "results[].provider_id",
  "results[].provider_name",
]
`;

exports[`Schema drift (key-tree snapshots) > 'watch_providers.tv_providers' shape 1`] = `
[
  "results",
  "results[].display_priorities",
  "results[].display_priorities.{}",
  "results[].display_priority",
  "results[].logo_path",
  "results[].provider_id",
  "results[].provider_name",
]
`;
